fix for bug #195965.

for the custom headers, we need to push CRLF (not just LF),
just like we do in the C++.  otherwise, qmail will complain.
thanks to James Nord (teilo+bugzilla@teilo.net) for the patch.

r=ssu, sr=sspitzer